<resources>
    <string name="app_name">Instagramo</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_pass">Enter your password</string>
    <string name="log_in">LOGIN</string>
    <string name="forgot_pass"><u>Forgot your password? No problem!</u></string>
    <string name="register_here"><u>Not a member yet? Register here.</u></string>
    <string name="empty">Field can\'t be empty.</string>
    <string name="invalid_email">This is not a valid email.</string>
    <string name="invalid_password">Password must contain at least 6 characters.</string>
    <string name="invalid_user">Email or password is incorrect</string>
    <string name="email">Email</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now!</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome!</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="reset_email_sent">Reset Email Sent</string>
    <string name="report">Report</string>
    <string name="list">List</string>
    <string name="share">Share</string>
    <string name="realtime_news">Realtime News!</string>
    <string name="settings">Settings</string>
    <string name="submit_a_felony">Submit a Felony</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="set_location">Set Location</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="Preview">preview</string>
    <string name="post_complete">Post Complete!</string>
    <string name="error_occurred">Error Ocurred</string>
    <string name="fill_camps">Need to fill all camps first</string>
    <string name="please_wait">Please Wait...</string>
</resources>
