<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:inputType="textEmailAddress"
        android:layout_toRightOf="@+id/email"
        android:layout_toEndOf="@+id/email"
        android:hint="@string/enter_email"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/email"
        android:textSize="18sp"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/enter_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_below="@+id/enter_email"
        android:layout_toRightOf="@+id/email"
        android:layout_toEndOf="@+id/email"
        android:hint="@string/enter_pass"/>

</RelativeLayout>