<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SocialActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/realtime_news"/>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_weight="2"
            android:contentDescription="@string/settings"
            android:background="@android:drawable/btn_dropdown"
            android:src="@drawable/settings_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <Button
            android:id="@+id/reportBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:onClick="FragmentReportClick"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/listBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:onClick="FragmentListClick"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="3"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/fragment_switch"
            android:name="com.altice.hojuelita.instagramo.FragmentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    </LinearLayout>



</LinearLayout>